# kimchi-mobile

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  rust-toolchain.toml
examples/android-app/: README.md
examples/expo-app/: README.md
examples/ios-app/: README.md
kimchi-ffi/: Cargo.toml
kimchi-ffi/src/: lib.rs
kimchi-prover/: Cargo.toml
kimchi-prover/src/: error.rs  lib.rs  prover.rs  types.rs
kimchi-prover/src/circuits/: mod.rs  threshold.rs
kimchi-prover/src/gadgets/: boolean.rs  comparison.rs  mod.rs  rsa.rs  sha256.rs
kimchi-wasm/: Cargo.toml  package-lock.json
kimchi-wasm/src/: lib.rs
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/com/kimchi/mobile/: KimchiProver.kt
scripts/: build-android.sh  build-expo.sh  build-ios.sh  build-wasm.sh  setup.sh  test.sh
swift/: Package.swift
