[package]
name = "kimchi-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FFI bindings for Kimchi mobile prover"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "kimchi_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]
# Enable for Android builds
android = []
# Enable for iOS builds
ios = []

[dependencies]
kimchi-prover = { path = "../kimchi-prover" }

# Kimchi/proof-systems dependencies for verification
kimchi = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
poly-commitment = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", branch = "master" }

# Arkworks serialization
ark-serialize.workspace = true

# MessagePack serialization (for Kimchi proofs)
rmp-serde = "1.3"

# FFI
uniffi.workspace = true

# Utilities
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
hex.workspace = true
sha2.workspace = true

# Android-specific logging
android_logger = { version = "0.13", optional = true }

# build.rs not needed when using proc-macro approach
# [build-dependencies]
# uniffi = { workspace = true, features = ["build"] }
